--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -17,8 +17,8 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: "#1d70d1",
-                        "background-light": "#f8fafc",
+                        primary: "#7f13ec",
+                        "background-light": "#faf5ff",
                         "background-dark": "#0f172a",
                     },
                     fontFamily: {
@@ -63,8 +63,7 @@
             <div class="glass-card rounded-2xl p-8 md:p-12 shadow-2xl">
                 <div class="text-center mb-8">
                     <div class="inline-flex items-center gap-2 mb-6">
-                        <span class="material-symbols-outlined text-primary text-2xl">dentistry</span>
-                        <span class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">Denta<span class="text-primary">NET</span></span>
+                        <img src="public/images/logo.jpg" alt="DentaNet Logo" class="h-24 w-auto rounded-lg shadow-md mx-auto"/>
                     </div>
                     <h1 class="text-3xl font-bold text-slate-900 dark:text-white mb-3">Reset Password</h1>
                     <p class="text-slate-600 dark:text-slate-400 text-sm leading-relaxed">
