lecturer interfaces updated

--- a/frontend/admin-manage-users.html
+++ b/frontend/admin-manage-users.html
@@ -52,8 +52,7 @@
   <!-- TOP NAV (same as master schedule) -->
   <nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
     <div class="flex items-center space-x-2">
-      <span class="material-symbols-outlined text-3xl">medical_services</span>
-      <span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
+      <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
     </div>
 
     <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
@@ -173,6 +172,7 @@
                 <option value="lecturer">Lecturer</option>
                 <option value="admin">Admin</option>
               </select>
+                <select class="w-full bg-slate-100 dark:bg-slate-800 border border-slate-400 dark:border-slate-400 rounded-xl text-sm font-semibold focus:ring-2 focus:ring-primary/30 focus:border-primary transition-all">
             </div>
 
             <div>
@@ -184,6 +184,7 @@
                 <option value="2022">2022</option>
                 <option value="2023">2023</option>
               </select>
+                <select class="w-full bg-slate-100 dark:bg-slate-800 border border-slate-400 dark:border-slate-400 rounded-xl text-sm font-semibold focus:ring-2 focus:ring-primary/30 focus:border-primary transition-all">
             </div>
           </div>
         </div>
