--- a/frontend/admin-settings.html
+++ b/frontend/admin-settings.html
@@ -49,8 +49,7 @@
 <body class="bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200 transition-colors duration-200">
 <nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
 <div class="flex items-center space-x-2">
-<span class="material-symbols-outlined text-3xl">medical_services</span>
-<span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
+<img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
 </div>
 <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
 <a class="hover:text-blue-200 transition-colors" href="admin-dashboard.html">Home</a>
@@ -168,7 +167,7 @@ document.getElementById('settingsBtn').onclick = function(e) {
 <div class="p-6 space-y-6">
 <div>
 <label class="block text-xs font-bold text-slate-500 uppercase mb-2">System Name</label>
-<input class="w-full rounded-xl border-slate-200 dark:border-slate-700 dark:bg-slate-900/50 focus:ring-primary focus:border-primary text-sm font-medium" type="text" value="DentaNet Academic LMS"/>
+<input class="w-full rounded-xl border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 focus:ring-primary focus:border-primary text-sm font-medium" type="text" value="DentaNet Academic LMS"/>
 </div>
 <div class="flex items-center justify-between">
 <div>
@@ -232,7 +231,7 @@ document.getElementById('settingsBtn').onclick = function(e) {
 <div class="p-6 space-y-6">
 <div>
 <label class="block text-xs font-bold text-slate-500 uppercase mb-2">Default New User Role</label>
-<select class="w-full rounded-xl border-slate-200 dark:border-slate-700 dark:bg-slate-900/50 focus:ring-primary focus:border-primary text-sm font-medium">
+<select class="w-full rounded-xl border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 focus:ring-primary focus:border-primary text-sm font-medium">
 <option>Dental Student</option>
 <option>Laboratory Technician</option>
 <option>Clinical Instructor</option>
@@ -260,13 +259,13 @@ document.getElementById('settingsBtn').onclick = function(e) {
 <div>
 <label class="block text-xs font-bold text-slate-500 uppercase mb-2">Main API Endpoint</label>
 <div class="relative">
-<input class="w-full rounded-xl border-slate-200 dark:border-slate-700 dark:bg-slate-900/50 focus:ring-primary focus:border-primary text-sm font-medium pr-10" type="text" value="https://api.dentanet-lms.com/v1"/>
+<input class="w-full rounded-xl border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 focus:ring-primary focus:border-primary text-sm font-medium pr-10" type="text" value="https://api.dentanet-lms.com/v1"/>
 <span class="material-symbols-outlined absolute right-3 top-2.5 text-slate-400 text-sm">link</span>
 </div>
 </div>
 <div>
 <label class="block text-xs font-bold text-slate-500 uppercase mb-2">Webhooks Callback URL</label>
-<input class="w-full rounded-xl border-slate-200 dark:border-slate-700 dark:bg-slate-900/50 focus:ring-primary focus:border-primary text-sm font-medium" placeholder="https://your-domain.com/hooks" type="text"/>
+<input class="w-full rounded-xl border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 focus:ring-primary focus:border-primary text-sm font-medium" placeholder="https://your-domain.com/hooks" type="text"/>
 </div>
 <div class="flex items-center justify-between pt-2">
 <span class="text-xs font-bold text-blue-600 dark:text-blue-400 cursor-pointer hover:underline">Regenerate API Keys</span>
