--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,11 +34,10 @@
 </head>
 <body class="font-sans antialiased bg-gradient-to-br from-purple-50/30 via-white to-cyan-50/30">
     <!-- Navigation -->
-    <nav class="fixed top-0 z-50 w-full px-6 py-4">
-        <div class="max-w-7xl mx-auto flex items-center justify-between bg-white/80 backdrop-blur-xl px-8 py-4 rounded-full shadow-lg border border-white/20">
+    <nav class="fixed top-0 z-50 w-full px-4 py-1">
+        <div class="max-w-7xl mx-auto flex items-center justify-between bg-white/80 backdrop-blur-xl px-4 py-0.5 rounded-full shadow-lg border border-white/20">
             <div class="flex items-center gap-3">
-                <img src="public/images/logo.jpg" alt="DentaNet Logo" class="h-10 w-auto rounded-lg"/>
-                <span class="text-xl font-bold tracking-tight">DentaNet</span>
+                <img src="blue-logo.svg" alt="DentaNet Logo" class="h-24 w-auto" />
             </div>
             <div class="hidden lg:flex items-center gap-10">
                 <a class="text-sm font-medium text-slate-700 hover:text-primary transition-colors" href="#home">Home</a>
