--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -40,10 +40,7 @@
 <body class="bg-background-light dark:bg-background-dark transition-colors duration-300">
 <nav class="sticky top-0 z-50 w-full bg-white dark:bg-gray-900 border-b border-purple-100 dark:border-gray-800 px-6 py-4 flex items-center justify-between">
 <div class="flex items-center gap-2">
-<div class="w-10 h-10 bg-primary rounded-xl flex items-center justify-center">
-<span class="material-icons-round text-white text-2xl">medical_services</span>
-</div>
-<span class="text-xl font-bold tracking-tight text-primary">DentaNET</span>
+    <img src="purple-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
 </div>
 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
 <a class="hover:text-primary transition-colors" href="#">Home</a>
@@ -69,9 +66,9 @@
 <span class="material-icons-round text-[20px]">assignment</span>
 <span class="font-medium">Exam Submission</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-purple-100 dark:hover:bg-gray-800 rounded-xl transition-colors" href="lab-slot-booking.html">
+<a class="flex items-center gap-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-purple-100 dark:hover:bg-gray-800 rounded-xl transition-colors" href="labslot-timetable.html">
 <span class="material-icons-round text-[20px]">event_available</span>
-<span class="font-medium">Lab Slot Booking</span>
+<span class="font-medium">Lab Slot Timetable</span>
 </a>
 <a class="flex items-center gap-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-purple-100 dark:hover:bg-gray-800 rounded-xl transition-colors" href="study-materials.html">
 <span class="material-icons-round text-[20px]">auto_stories</span>
