--- a/frontend/admin-api-monitor.html
+++ b/frontend/admin-api-monitor.html
@@ -51,8 +51,7 @@
   <!-- TOP NAV (same style as master schedule) -->
   <nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
     <div class="flex items-center space-x-2">
-      <span class="material-symbols-outlined text-3xl">medical_services</span>
-      <span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
+      <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
     </div>
 
     <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
@@ -70,7 +69,7 @@
 
   <div class="flex min-h-screen">
     <!-- SIDEBAR (same style as master schedule) -->
-    <aside class="w-72 bg-[#0F172A] p-6 flex flex-col space-y-8 text-slate-300 hidden lg:flex border-r border-slate-800">
+    <aside class="w-72 bg-bg-sidebar p-6 flex flex-col space-y-8 text-slate-300 hidden lg:flex border-r border-slate-800">
       <div class="pt-4">
         <h2 class="text-xs font-bold opacity-50 uppercase tracking-[0.2em]">Management</h2>
         <p class="text-xs font-medium text-blue-400 mt-1">Lab Admin Suite</p>
