--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -43,8 +43,7 @@
 <body class="bg-bg-main dark:bg-slate-900 text-slate-800 dark:text-slate-200 transition-colors duration-200">
 <nav class="bg-primary text-white px-6 py-3 flex items-center justify-between sticky top-0 z-50 shadow-lg">
 <div class="flex items-center space-x-2">
-<span class="material-symbols-outlined text-3xl">medical_services</span>
-<span class="text-xl font-bold tracking-tight uppercase">DentaNET</span>
+<img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
 </div>
 <div class="hidden md:flex items-center space-x-8 text-sm font-medium">
 <a class="hover:text-blue-200 transition-colors" href="#" id="homeBtn">Home</a>
