--- a/frontend/grades-feedback.html
+++ b/frontend/grades-feedback.html
@@ -45,7 +45,7 @@
 <header class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
 <div class="max-w-screen-2xl mx-auto px-6 h-16 flex items-center justify-between">
 <div class="flex items-center gap-2">
-<img src="public/images/logo.jpg" alt="DentaNet Logo" style="height:40px; width:auto; display:inline-block; vertical-align:middle;" />
+<img src="purple-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
 </div>
 <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600 dark:text-slate-400">
 <a class="hover:text-primary transition-colors" href="#">Home</a>
@@ -71,9 +71,9 @@
   <span class="material-symbols-outlined">upload_file</span>
   <span>Practical Exam Submission</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="lab-slot-booking.html">
+<a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="labslot-timetable.html">
   <span class="material-symbols-outlined">event_seat</span>
-  <span>Lab Slot Booking</span>
+  <span>Lab Slot Timetable</span>
 </a>
 <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="study-materials.html">
   <span class="material-symbols-outlined">menu_book</span>
@@ -199,7 +199,7 @@
     If you did not pass or wish to improve your score, you can retake the <span class="font-bold text-white">'Cavity Preparation'</span> practical. Retakes are available for eligible students only.
   </p>
   <div class="space-y-4">
-    <a href="lab-slot-booking.html" class="block w-full py-4 bg-white text-indigo-600 text-sm font-bold rounded-xl hover:bg-indigo-50 transition-colors shadow-lg text-center">
+    <a href="labslot-timetable.html" class="block w-full py-4 bg-white text-indigo-600 text-sm font-bold rounded-xl hover:bg-indigo-50 transition-colors shadow-lg text-center">
       Request Retake
     </a>
     <p class="text-center text-[11px] text-indigo-200 uppercase font-bold tracking-widest">Pass the practical test to sit for the end exam paper</p>
