--- a/frontend/lab-slot-booking.html
+++ b/frontend/lab-slot-booking.html
@@ -39,10 +39,9 @@
 <body class="bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-100 min-h-screen flex flex-col">
 <header class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
   <div class="max-w-screen-2xl mx-auto px-6 h-16 flex items-center justify-between">
-    <div class="flex items-center gap-2">
-      <span class="material-symbols-outlined text-primary text-3xl">dentistry</span>
-      <span class="text-xl font-bold text-primary tracking-tight">DentaNet</span>
-    </div>
+  <div class="flex items-center gap-2">
+      <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
+  </div>
     <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600 dark:text-slate-400">
       <a class="hover:text-primary transition-colors" href="student-dashboard.html">Home</a>
       <a class="hover:text-primary transition-colors" href="study-materials.html">Courses</a>
@@ -293,12 +292,12 @@ Practice Sessions
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 <div>
 <label class="block text-sm font-semibold text-slate-700 dark:text-slate-300 mb-2">Select Date</label>
-<input class="w-full px-4 py-3 rounded-lg border-2 border-slate-200 dark:border-slate-600 bg-white dark:bg-slate-700 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors" type="date" min="2026-01-26" required/>
+<input class="w-full px-4 py-3 rounded-lg border-2 border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors" type="date" min="2026-01-26" required/>
 </div>
 
 <div>
 <label class="block text-sm font-semibold text-slate-700 dark:text-slate-300 mb-2">Select Time Slot</label>
-<select class="w-full px-4 py-3 rounded-lg border-2 border-slate-200 dark:border-slate-600 bg-white dark:bg-slate-700 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors" required>
+<select class="w-full px-4 py-3 rounded-lg border-2 border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors" required>
 <option value="">Choose a time...</option>
 <option>8:00 AM - 9:00 AM</option>
 <option>9:00 AM - 10:00 AM</option>
@@ -314,7 +313,7 @@ Practice Sessions
 
 <div>
 <label class="block text-sm font-semibold text-slate-700 dark:text-slate-300 mb-2">Practice Focus (Optional)</label>
-<textarea class="w-full px-4 py-3 rounded-lg border-2 border-slate-200 dark:border-slate-600 bg-white dark:bg-slate-700 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors resize-none" placeholder="What do you want to practice? (e.g., cavity detection, crown preparation...)" rows="2"></textarea>
+<textarea class="w-full px-4 py-3 rounded-lg border-2 border-slate-400 dark:border-slate-400 bg-slate-100 dark:bg-slate-800/60 text-slate-900 dark:text-white focus:border-primary focus:outline-none transition-colors resize-none" placeholder="What do you want to practice? (e.g., cavity detection, crown preparation...)" rows="2"></textarea>
 </div>
 
 <button class="w-full bg-primary hover:bg-blue-600 text-white font-bold py-4 rounded-lg transition-all shadow-md hover:shadow-lg active:scale-[0.98]" type="submit">
