--- a/frontend/lecturer-upload-materials.html
+++ b/frontend/lecturer-upload-materials.html
@@ -47,10 +47,7 @@
 <div class="px-4 sm:px-6 lg:px-8">
 <div class="flex justify-between items-center h-16">
 <div class="flex items-center gap-2">
-<div class="w-10 h-10 bg-primary rounded-lg flex items-center justify-center text-white">
-<span class="material-icons-round">medical_services</span>
-</div>
-<span class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">Denta<span class="text-primary">NET</span></span>
+    <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
 </div>
 <div class="flex items-center space-x-4">
 <button class="relative p-2 text-slate-500 hover:text-primary dark:text-slate-400 dark:hover:text-white transition-colors">
