--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,7 +36,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center gap-2">
-                    <img src="public/images/logo.jpg" alt="DentaNet Logo" class="h-14 w-auto rounded-lg shadow-md"/>
+                    <img src="blue-logo.svg" alt="DentaNet Logo" class="h-24 w-auto" />
                 </div>
                 <nav class="hidden md:flex items-center gap-8">
                     <a class="text-sm font-medium hover:text-primary transition-colors" href="index.html">Home</a>
@@ -58,9 +58,7 @@
         <div class="relative z-10 w-full max-w-md px-4 py-12">
             <div class="bg-white/90 dark:bg-slate-900/90 backdrop-blur-xl shadow-2xl rounded-3xl p-8 md:p-10 border border-slate-200 dark:border-slate-700">
                 <div class="text-center mb-8">
-                    <div class="inline-flex items-center gap-2 mb-4">
-                        <img src="public/images/logo.jpg" alt="DentaNet Logo" class="h-24 w-auto rounded-lg shadow-md"/>
-                    </div>
+                    <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto mx-auto mb-4" />
                     <h1 class="text-3xl font-extrabold text-slate-800 dark:text-white mb-2">Welcome Back</h1>
                     <p class="text-slate-500 dark:text-slate-400">Login to DentaNet LMS</p>
                 </div>
