--- a/frontend/practical-exam-submission.html
+++ b/frontend/practical-exam-submission.html
@@ -42,8 +42,7 @@
   <header class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
     <div class="max-w-screen-2xl mx-auto px-6 h-16 flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <span class="material-symbols-outlined text-primary text-3xl">dentistry</span>
-        <span class="text-xl font-bold text-primary tracking-tight">DentaNet</span>
+        <img src="purple-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
       </div>
 
       <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600 dark:text-slate-400">
@@ -81,7 +80,7 @@
 
           <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="lab-slot-booking.html">
             <span class="material-symbols-outlined">event_seat</span>
-            <span>Lab Slot Booking</span>
+            <span>Lab Slot Timetable</span>
           </a>
 
           <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="study-materials.html">
