--- a/frontend/study-materials.html
+++ b/frontend/study-materials.html
@@ -61,7 +61,7 @@
     <header class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
       <div class="max-w-screen-2xl mx-auto px-6 h-16 flex items-center justify-between">
       <div class="flex items-center gap-2">
-          <img src="public/images/logo.jpg" alt="DentaNet Logo" style="height:40px; width:auto; display:inline-block; vertical-align:middle;" />
+          <img src="purple-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
       </div>
 
         <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600 dark:text-slate-400">
@@ -103,9 +103,9 @@
               <span>Practical Exam Submission</span>
             </a>
 
-            <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="lab-slot-booking.html">
+            <a class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-white/10 transition-colors" href="labslot-timetable.html">
               <span class="material-symbols-outlined">event_seat</span>
-              <span>Lab Slot Booking</span>
+              <span>Lab Slot Timetable</span>
             </a>
 
             <!-- ACTIVE -->
