--- a/frontend/lab-slot-booking.html
+++ b/frontend/lab-slot-booking.html
@@ -38,15 +38,15 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-100 min-h-screen flex flex-col">
 <header class="bg-indigo-50 dark:bg-slate-900 border-b border-indigo-100 dark:border-slate-800 sticky top-0 z-50">
-  <div class="max-w-screen-2xl mx-auto px-6 h-16 flex items-center justify-between">
+  <div class="max-w-screen-2xl mx-auto px-4 h-12 flex items-center justify-between">
   <div class="flex items-center gap-2">
-      <img src="blue-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
+      <img src="purple-logo.svg" alt="DentaNet Logo" class="h-20 w-auto" />
   </div>
-    <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600 dark:text-slate-400">
+    <nav class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-600 dark:text-slate-400">
       <a class="hover:text-primary transition-colors" href="student-dashboard.html">Home</a>
       <a class="hover:text-primary transition-colors" href="study-materials.html">Courses</a>
       <a class="hover:text-primary transition-colors" href="#">Support</a>
-      <button class="bg-white dark:bg-slate-800 px-5 py-2 rounded-lg border border-slate-200 dark:border-slate-700 hover:shadow-sm transition-all text-slate-700 dark:text-slate-200" onclick="window.location.href='login.html'">
+      <button class="bg-white dark:bg-slate-800 px-4 py-1.5 rounded-lg border border-slate-200 dark:border-slate-700 hover:shadow-sm transition-all text-slate-700 dark:text-slate-200" onclick="window.location.href='login.html'">
         Log Out
       </button>
     </nav>
@@ -69,7 +69,7 @@
         <span>Practical Exam Submission</span>
       </a>
       <!-- ACTIVE -->
-      <a class="flex items-center gap-3 px-4 py-3 rounded-xl bg-white text-primary shadow-lg font-semibold" href="#">
+      <a class="flex items-center gap-3 px-4 py-3 rounded-xl bg-white text-primary shadow-lg font-semibold" href="lab-slot-booking.html">
         <span class="material-symbols-outlined">event_seat</span>
         <span>Lab Slot Booking</span>
       </a>
