--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -38,18 +38,18 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark transition-colors duration-300">
-<nav class="sticky top-0 z-50 w-full bg-white dark:bg-gray-900 border-b border-purple-100 dark:border-gray-800 px-6 py-4 flex items-center justify-between">
-<div class="flex items-center gap-2">
+<nav class="sticky top-0 z-50 w-full bg-white dark:bg-gray-900 border-b border-purple-100 dark:border-gray-800 px-4 h-14 flex items-center justify-between">
+  <div class="flex items-center gap-2">
     <img src="purple-logo.svg" alt="DentaNet Logo" class="h-32 w-auto" />
-</div>
-<div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
-<a class="hover:text-primary transition-colors" href="#">Home</a>
-<a class="hover:text-primary transition-colors" href="#">About</a>
-<a class="hover:text-primary transition-colors" href="#">Contact</a>
-<button id="logoutBtn" class="px-5 py-2.5 bg-primary text-white rounded-full font-semibold shadow-lg shadow-purple-200 dark:shadow-none hover:bg-primary-dark transition-all">
-                Log Out
-            </button>
-</div>
+  </div>
+  <div class="hidden md:flex items-center gap-6 text-sm font-medium text-gray-600 dark:text-gray-300">
+    <a class="hover:text-primary transition-colors" href="#">Home</a>
+    <a class="hover:text-primary transition-colors" href="#">About</a>
+    <a class="hover:text-primary transition-colors" href="#">Contact</a>
+    <button id="logoutBtn" class="px-5 py-2 bg-primary text-white rounded-full font-semibold shadow-lg shadow-purple-200 dark:shadow-none hover:bg-primary-dark transition-all">
+      Log Out
+    </button>
+  </div>
 </nav>
 <div class="flex min-h-screen">
 <aside class="w-72 bg-sidebar-light dark:bg-sidebar-dark p-6 hidden lg:block border-r border-purple-100 dark:border-gray-800">
@@ -66,7 +66,7 @@
 <span class="material-icons-round text-[20px]">assignment</span>
 <span class="font-medium">Exam Submission</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-purple-100 dark:hover:bg-gray-800 rounded-xl transition-colors" href="labslot-timetable.html">
+<a class="flex items-center gap-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-purple-100 dark:hover:bg-gray-800 rounded-xl transition-colors" href="lab-slot-booking.html">
 <span class="material-icons-round text-[20px]">event_available</span>
 <span class="font-medium">Lab Slot Timetable</span>
 </a>
@@ -229,12 +229,12 @@
 <script>
 // Logout button functionality
 document.getElementById('logoutBtn').onclick = function() {
-    localStorage.removeItem('token');
+    localStorage.removeItem('authToken');
     localStorage.removeItem('user');
     window.location.href = 'login.html';
 };
 // Redirect to login if not authenticated
-const token = localStorage.getItem('token');
+const token = localStorage.getItem('authToken');
 if (!token) {
     window.location.href = 'login.html';
 }
